# master-thesis-project

./: .gitignore  README.md  main.py  pyproject.toml
configs/: pd_config.yaml  pg_config.yaml
docs/: architecture.md  human_pgg_behavior.md  python-expert.md  seminar.md  terms.md
docs/experiments/: README.md  exp0_determinism.md  exp1_1_temperature.md
docs/games/: prisoners_dilemma.md  public_goods.md
docs/papers/: illusion_of_randomness_2025.md
outputs/: exp1_2_collected.csv  exp1_2_collected.json  exp1_2_results.xlsx
outputs/exp0_iter1/: analysis.json  run_config.json  run_summary.json  run_summary_part1.json  run_summary_part2.json  run_summary_pre_topup.json
outputs/exp0_probe/: run_config.json  run_summary.json
outputs/exp0_probe2/: run_config.json  run_summary.json
outputs/exp0_smoke/: analysis.json  run_config.json  run_summary.json
outputs/exp1_1/: run_config.json  run_summary.json
outputs/exp1_1_gpt4o_openai/: exp1_1_analysis.json  exp1_1_report.md  run_config.json  run_summary.json
outputs/exp1_1_gpt4o_probe/: exp1_1_analysis.json  exp1_1_report.md  run_config.json  run_summary.json
outputs/exp1_1_llama_probe/: exp1_1_analysis.json  exp1_1_report.md  run_config.json  run_summary.json
outputs/exp1_1_merged/: exp1_1_analysis.json  exp1_1_report.md  run_summary.json
outputs/exp1_2_md/: anthropic_claude-opus-4.7.md  google_gemini-2.5-pro.md  meta-llama_llama-4-maverick.md  openai_gpt-4o.md
scripts/: collect_exp1_2.py  exp1_1_analyze.py  exp1_1_runner.py  exp2_1_status.py  exp_status.py  sessions_to_excel.py  sessions_to_md.py
(+2044 files in other folders)
